# ferris-bot

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
src/bot_commands/: mod.rs
src/discord_api/: mod.rs
