[package]
name = "ferris-bot"
version = "0.1.0"
authors = ["Connor Postma <connor.postma@gmail.com>"]
edition = "2018"

[dependencies]
# Debug logging
env_logger = "0.6.1"
# Helper to retreive
dotenv = "0.14"
# The most fun web and actor system framework
actix = "0.8.1"
actix-web = "1.0.0-beta.3"
actix-rt = "0.2.2"
# A handle bars based html engine. Very fast, and includes templates on compile time
yarte = { version = "0.2", features = ["with-actix-web"] }
# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# An adorable little crustacean that just want's to say hello
ferris_says = "0.1.1"